# livekit-plugins-yandex

./: .gitignore  CLAUDE.md  pyproject.toml
livekit/plugins/yandex/: __init__.py  _auth.py  _retry.py  log.py  models.py  stt.py  tts.py
livekit/plugins/yandex/_proto/yandex/cloud/: validation_pb2_grpc.py
livekit/plugins/yandex/_proto/yandex/cloud/ai/stt/v3/: stt_pb2_grpc.py  stt_service_pb2.py  stt_service_pb2_grpc.py
livekit/plugins/yandex/_proto/yandex/cloud/ai/tts/v3/: tts_pb2_grpc.py  tts_service_pb2.py  tts_service_pb2_grpc.py
livekit/plugins/yandex/_proto/yandex/cloud/api/: operation_pb2_grpc.py
livekit/plugins/yandex/_proto/yandex/cloud/operation/: operation_pb2_grpc.py
scripts/: gen_proto.sh
tests/: test_auth.py  test_retry.py  test_streaming.py  test_stt.py  test_tts.py
